--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,7 +7,7 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
       - name: Install 🤖
-        run: carbo build --verbose
+        run: cargo build --verbose
       - name: Build 🔧
         run: trunk build
       - name: Deploy 🚀
