--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -6,9 +6,11 @@ jobs:
     steps:
       - name: Checkout 🛎️
         uses: actions/checkout@v2.3.1
-      - name: Install 🤖
-        run: cargo build --verbose
-      - name: Build 🔧
+      - name: Install Trunk 🚚
+        run: cargo install trunk
+      - name: Install Dependences 🤖
+        run: cargo build
+      - name: Build The Project 🔧
         run: trunk build
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@4.1.6
